package Src.Engine;

public enum CompetitionMode {
    Solo , Team
}
