package Src.Gymnaste;

public enum Figure {
    Anneaux,ChevalDarçon,Poutre,BarresParallèles
}
