package Src;

import java.util.Map;

public class GymnasteNotesRegister {
    private Map<String , SoloCachedNote> gymnastesNotesByFigure ;
    private Map<String , TeamCachedNote> teamsNotesByEngine ;

    public GymnasteNotesRegister() {}

    public void RegisterSoloNote(Integer firstNote , Integer secondNote  , Integer thirdNote ,Integer gymnasteId ){}
    public void RegisterTeamNote(Integer note  ,Integer teamId){}
    public void SetEngine(String engineId ){}
    public void SetCompetitionMode(CompetitionMode mode ){}
}
