package Src.Judge;

public class NumeriqueCard {
    private Integer note;  

    public Integer GetNote() {
        return note;
    }
    
    public void SetNote(Integer note ) {
        this.note = note;
    }
}
