package Src;

public class PointGym {
    private GymnasteNotesRegister gymnasteNotesRegister ;
    private RegistrationAgent registrationAgent ;
    
    public PointGym() {}
    
    public void RegisterGymnaste(String firstName ,String lastName  ,Integer age,String addresse,String teamName) {}
    public void RegisterJudge(String firstName , String lastName  ,Integer Matricule) {}
    public void StartFirstDayCompetition() {}
    public void StartSecondDayCompetition() {}
}
