package Src;

public class SoloCachedNote {

}
