package Src;

import java.util.ArrayList;

public class Team {
    private ArrayList<Gymnaste> gymnastes ;
    public Team(){}

    public void AppendGymnaste(Gymnaste gymnaste){}
    public Gymnaste GetGymnaste(Integer index){}
    public Integer GetTeamMembersCount(){}
    public void SetRoutine(Routine routine){}
}
